# API_online_store

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api_online_store/src/: database.py  dependencies.py  main.py
api_online_store/src/auth/: service.py  utils.py
api_online_store/src/categories/: router.py  service.py
api_online_store/src/orders/: router.py
api_online_store/src/products/: models.py  router.py  schemas.py
api_online_store/src/users/: router.py
rabbitmq_data/: .erlang.cookie
rabbitmq_data/mnesia/rabbit@ede4e3fe2b13/: cluster_nodes.config  nodes_running_at_shutdown  rabbit_durable_exchange.DCL  rabbit_runtime_parameters.DCL  rabbit_user.DCL  rabbit_user_permission.DCL  rabbit_vhost.DCL
rabbitmq_data/mnesia/rabbit@ede4e3fe2b13/coordination/rabbit@ede4e3fe2b13/: 0000000000000001.wal  meta.dets  names.dets
rabbitmq_data/mnesia/rabbit@ede4e3fe2b13/coordination/rabbit@ede4e3fe2b13/RABBIT3NZ10DMP9WQ3/: config
src/: config.py  dao.py  database.py  dependencies.py  main.py  schemas.py
src/auth/: router.py  schemas.py  service.py
src/categories/: dao.py  models.py  router.py  schemas.py  service.py
src/migrations/: env.py
src/migrations/versions/: 49b8e056a9fb_add_all.py  e47e6594a2d4_.py
src/orders/: dao.py  models.py  router.py  schemas.py  service.py
src/products/: dao.py  dependencies.py  schemas.py  service.py
src/users/: dao.py  models.py  router.py  schemas.py  service.py
(+4 files in other folders)
